# ganerf

./: README.md  pyproject.toml
assets/2e74812d00/: 30fps.json
docs/: index.html
docs/static/js/: bulma-carousel.js  index.js
ganerf/: ganerf.py  ganerf_config.py  ganerf_datamanager.py  ganerf_pipeline.py  ganerf_trainer.py  scannetpp_config.py  scannetpp_dataparser.py
generator/: generator.py  generator_loss.py  paired_image_dataset.py  stylegan2.py
generator/torch_utils/: custom_ops.py  misc.py  persistence.py  training_stats.py
generator/torch_utils/ops/: bias_act.py
scripts/: eval.py  prepare_generator_training.py  render.py  run_generator.py  train.py  train_generator.py  undistort_scannetpp.py
utils/: eval_utils.py  tracker.py  vgg_loss.py  writer.py
